tests/transpiler/x/rs/group_by_having.error
rustc: exit status 1
error[E0425]: cannot find function `json` in this scope
  --> /workspace/mochi/tests/transpiler/x/rs/group_by_having.rs:38:5
   |
38 |     json(big);
   |     ^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
